--- a/hub/static/css/search.css
+++ b/hub/static/css/search.css
@@ -45,6 +45,9 @@
   border-bottom-color: lightgrey;
   border-bottom-width: 1px;
   padding-left: 10px;
+  overflow: hidden;
+  text-overflow: clip;
+  white-space: nowrap;
 }
 .search_p_title{
   font-weight: bold;
@@ -81,6 +84,10 @@
 .search_location{
   padding-left: 10px;
   padding-top: 6px;
+  overflow: hidden;
+  text-overflow: clip;
+  white-space: nowrap;
+
 }
 .search_p_location{
   font-family: monospace;
@@ -92,6 +99,10 @@
   padding-left: 10px;
   padding-top: 2px;
   padding-bottom: 2px;
+  overflow: hidden;
+  text-overflow: clip;
+  white-space: nowrap;
+
 }
 .search_p_hashtag{
   font-family: monospace;
